--- a/config/local.yaml
+++ b/config/local.yaml
@@ -7,3 +7,11 @@ GRPC:
 database:
   url: "postgres://postgres:postgres@localhost:5433/authmicroservice"  
   pool_max: 2
+
+jwt_access:
+  secret: "jwt_access_secret_key"
+  duration: 15m
+
+jwt_refresh:
+  secret: "jwt_refresh_secret_key"
+  duration: 30d
